--- a/29_flask_restful_CRUD/Pipfile
+++ b/29_flask_restful_CRUD/Pipfile
@@ -10,8 +10,9 @@ flask-migrate = "*"
 ipdb = "*"
 faker = "*"
 jsonify = "*"
+flask-restful = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.8.13"
